--- a/server/.env
+++ b/server/.env
@@ -11,24 +11,24 @@ ADMIN_PASSWORD=admin
 
 
 # nodemailer
-OAUTH_USER=google@gmail.com
-OAUTH_CLIENT_ID=9030886670-dfbhuwdbfrhbwejrkrehnrjo5.apps.googleusercontent.com
-OAUTH_CLIENT_SECRET=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
-OAUTH_REFRESH_TOKEN=1//04IfAnEYsGVreCgYIARAAGAQSNwF-L9IrPk9MH4xyRd-ZDUPTO3xR-bmSDZaVrHajGSEkJpJyL5S2bkuNX7FYPM91vU2VSlAjOko
-OAUTH_REDERICT_URI=https://developers.google.com/oauthplayground
+OAUTH_USER=google@grr32mail.com
+OAUTH_CLIENT_ID=9030886670-dfr23r3rr32bhuwdbfrhbwejrkrehnrjo5.apps.googleusercontent.com
+OAUTH_CLIENT_SECRET=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E6HQBopt
+OAUTH_REFRESH_TOKEN=1//04IfAnEYsGVr324rreCgYIARAAGAQSNwF-L9IrPk9MH4xyRd-ZDUPTO3xR-bmSDZaVrHajGSEkJpJyL5S2bkuNX7FYPM91vU2VSlAjOko
+OAUTH_REDERICT_URI=https://developer32rs.google.com/oauthplayground
 
 # JWT TOKEN
-JWT_EMAIL_CONFIRMATION_KEY=hjgihdt82478svhohguwry79t
-JWT_SECRET_KEY= bnvdjKkjdfiwdy87976329ug8ut764yuy
-JWT_RESET_FORGOTTEN_PASSWORD_KEY=vjnbjfbdhbewiy9u238957hhij
+JWT_EMAIL_CONFIRMATION_KEY=hjgihf23rdfrt82478svhohguwry79t
+JWT_SECRET_KEY= bnvdjKkjdfiwdyfrt23rf43387976329ug8ut764yuy
+JWT_RESET_FORGOTTEN_PASSWORD_KEY=vjnbjfbtr2f43tr43dhbewiy9u238957hhij
 
-GOOGLE_CLIENT_ID=9030886670-dfbhuwdbfrhbwejrkrehnrjo5.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=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
+GOOGLE_CLIENT_ID=9030886670-dfbhuwdbfrhbwejrkdr23rer4342rehnrjo5.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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opt
 
 # cloudinary
-CLOUDINARY_NAME=deb21jcyp
-CLOUDINARY_KEY=634383733199164
-CLOUDINARY_SECRET=hfJYFdXsve8gC81vEPT0_R1CXGw
+CLOUDINARY_NAME=df2wreb21jcypfyugeuyh4fw
+CLOUDINARY_KEY=fr421r4rtr34tr435tr
+CLOUDINARY_SECRET=hfJYFdXsvr23e8gC81vEPT0_R1CXGw
 
 # The following is the default value for the security
 PORT=8080
